--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                   <form id="container">
                     <div class="mb-3">
                       <h3>TRIVIA</h3>
+                      <h3>TRIVIA</h3>
                     </div>
                     <div class="mb-3">
                       <label for="questionC" class="form-label">Number of questions</label>
