Required en todos los formularios
Adaptacion final sobre los required en el formulario principal y en cada respuesta de las trivias

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                     </div>
                     <div class="mb-3">
                       <label for="categories" class="form-label">Category</label>
-                      <select name="categories" class="form-control" id="categories">
+                      <select name="categories" class="form-control" id="categories" required>
                         <option value="select-categories">Select category</option>  
             
                       </select>
                     </div>
                     <div class="mb-3">
                         <label for="types" class="form-label">Type of question</label>
-                        <select name="types" class="form-control" id="types">
+                        <select name="types" class="form-control" id="types" required>
                           <option value="select-types">Select the type of questions</option>
                             <option value="boolean">True or false</option>
                             <option value="multiple">Multiple choice</option>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="mb-3">
                       <label for="difficulty" class="form-label">Difficulty</label>
-                      <select name="difficulty" class="form-control" id="difficulty">
+                      <select name="difficulty" class="form-control" id="difficulty" required>
                         <option value="select-difficulty">Select difficulty</option>
                           <option value="easy">Easy</option>
                           <option value="medium">Medium</option>
